* Fixed vertical alignment of text inside input elements

--- a/packages/jezvejs/src/Components/DropDown/components/Input/style.scss
+++ b/packages/jezvejs/src/Components/DropDown/components/Input/style.scss
@@ -8,6 +8,7 @@
   padding: var(--dd-input-padding);
   margin: 0;
   height: var(--dd-combo-content-height);
+  line-height: var(--dd-combo-content-height);
   min-width: 50px;
   background: var(--dd-input-bg);
   color: var(--dd-input-text);
